Use Set::copyOf instead of Collections::unmodifiableSet Added Collection<Lang> accessors to Writer registries as well RDFWriterRegistry::registered is deprecated