@@ -301,22 +301,36 @@ public class RDFWriterRegistry
 
     /** All registered graph formats */
     public static Collection<RDFFormat> registeredGraphFormats() {
-        return Collections.unmodifiableSet(registryGraph.keySet()) ;
+        return Set.copyOf(registryGraph.keySet()) ;
     }
 
     /** All registered dataset formats */
     public static Collection<RDFFormat> registeredDatasetFormats() {
-        return Collections.unmodifiableSet(registryDataset.keySet()) ;
+        return Set.copyOf(registryDataset.keySet()) ;
     }
 
     /** All registered formats */
-    public static Collection<RDFFormat> registered() {
+    public static Collection<RDFFormat> registeredFormats() {
         Set<RDFFormat> x = new HashSet<>() ;
         x.addAll(registryGraph.keySet()) ;
         x.addAll(registryDataset.keySet()) ;
-        return Collections.unmodifiableSet(x) ;
+        return Set.copyOf(x) ;
     }
 
+    /**
+     * All registered formats.
+     * @deprecated Use {@link #registeredFormats()} instead.
+    */
+    @Deprecated
+    public static Collection<RDFFormat> registered() {
+        return registeredFormats();
+    }
+    
+    /** All registered languages */
+    public static Collection<Lang> registeredLangs() {
+        return Set.copyOf(langToFormat.keySet());
+    }
+    
     /** Get the graph writer factory associated with the language */
     public static WriterGraphRIOTFactory getWriterGraphFactory(Lang lang) {
         RDFFormat serialization = defaultSerialization(lang) ;
